Add Book constructor

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Library</title>
+  </head>
+  <body>
+    <form>
+      <label for="booktitle">Book title:</label><br />
+      <input type="text" id="booktitle" name="booktitle" /><br />
+      <label for="author">Author:</label><br />
+      <input type="text" id="author" name="author" /><br />
+      <label for="pages">Pages:</label><br />
+      <input type="text" id="pages" name="pages" /><br />
+      <input type="radio" id="read" name="read" value="read" />
+      <label for="read">Read</label><br />
+      <input type="radio" id="unread" name="read" value="unread" />
+      <label for="unread">Unread</label><br />
+      <input type="submit" value="Submit" />
+    </form>
+    <script src="script.js"></script>
+  </body>
 </html>
