implement addbooks, show books, delete books

--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Library</title>
   </head>
   <body>
-    <form>
+    <form id="form">
       <label for="booktitle">Book title:</label><br />
-      <input type="text" id="booktitle" name="booktitle" /><br />
+      <input type="text" id="title" name="title" /><br />
       <label for="author">Author:</label><br />
       <input type="text" id="author" name="author" /><br />
       <label for="pages">Pages:</label><br />
       <input type="text" id="pages" name="pages" /><br />
       <input type="radio" id="read" name="read" value="read" />
       <label for="read">Read</label><br />
-      <input type="radio" id="unread" name="read" value="unread" />
+      <input type="radio" id="read" name="read" value="unread" />
       <label for="unread">Unread</label><br />
       <input type="submit" value="Submit" />
     </form>
-    <script src="script.js"></script>
+    <div>
+      <ul></ul>
+    </div>
+    <script src="./script.js"></script>
   </body>
 </html>
