add add-btn feature

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Library</title>
   </head>
   <body>
-    <form id="form">
+    <button type="button" id="button" value="Add new book">Add new book</button>
+    <form id="form" name="insert">
       <label for="booktitle">Book title:</label><br />
       <input type="text" id="title" name="title" /><br />
       <label for="author">Author:</label><br />
